@@ -26,6 +26,7 @@
 
 #include "image.h"
 #include "cameraimage.h"
+#include "valuerectangle.h"
 
 #include <libnova/libnova.h>
 
@@ -138,6 +139,7 @@ class DevClientCameraImage:public rts2core::DevClientCamera
 		void writeFilter (Image *img);
 
 		rts2core::DoubleArray * getDoubleArray (const char *name);
+		rts2core::ValueRectangle * getRectangle (const char *name);
 
 		// we have to allocate that field as soon as we get the knowledge of
 		// camera chip numbers..
