@@ -1,3 +1,6 @@
+2012-08-26
+ * changed DETSIZE to rectangle value, properly write rectangles (defines getDisplayValue)
+
 2012-07-31
  * add values debug flag
 
